question 6
