# src/controllers/console.controller.ts
@@ -3,6 +3,8 @@ import { consoleService } from "../services/console.service";
 import { ConsoleDTO } from "../dto/console.dto";
 import {notFound} from "../error/NotFoundError";
 import * as Console from "node:console";
+import {GameDTO} from "../dto/game.dto";
+import {gameService} from "../services/game.service";
 
 @Route("consoles")
 @Tags("Consoles")
@@ -17,6 +19,12 @@ export class ConsoleController extends Controller {
   @Get("{id}")
   public async getConsoleById(@Path() id: number): Promise<ConsoleDTO | null> {
       return consoleService.getConsoleById(id);
+  }
+
+  // Récupère une console par ID
+  @Get("{id}/games")
+  public async getGamesByConsoleId(@Path() id: number): Promise<GameDTO[] | null> {
+    return gameService.getGameByConsoleId(id);
   }
 
   // Crée une nouvelle console
